--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         gtag('config', 'UA-110490844-2');
     </script>
         <title>Arun</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.min.css') }}">
+    <link rel="stylesheet" href="./styles/main.css">
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.2/paper-full.min.js"></script>
         <style>
