--- a/index.html
+++ b/index.html
@@ -21,37 +21,37 @@
 
             @keyframes blinking {
                 0% {
-                    background-color: rgba({{color_string}}, 0)
+                    background-color: rgba(255,0,0, 0)
                 }
                 10% {
-                    background-color: rgba({{color_string}}, .2)
+                    background-color: rgba(255,0,0, .2)
                 }
                 20% {
-                    background-color: rgba({{color_string}}, .4)
+                    background-color: rgba(255,0,0, .4)
                 }
                 30% {
-                    background-color: rgba({{color_string}}, .6)
+                    background-color: rgba(255,0,0, .6)
                 }
                 40% {
-                    background-color: rgba({{color_string}}, .8)
+                    background-color: rgba(255,0,0, .8)
                 }
                 50% {
-                    background-color: rgba({{color_string}}, 1)
+                    background-color: rgba(255,0,0, 1)
                 }
                 60% {
-                    background-color: rgba({{color_string}}, .8)
+                    background-color: rgba(255,0,0, .8)
                 }
                 70% {
-                    background-color: rgba({{color_string}}, .6)
+                    background-color: rgba(255,0,0, .6)
                 }
                 80% {
-                    background-color: rgba({{color_string}}, .4)
+                    background-color: rgba(255,0,0, .4)
                 }
                 90% {
-                    background-color: rgba({{color_string}}, .2)
+                    background-color: rgba(255,0,0, .2)
                 }
                 100% {
-                    background-color: rgba({{color_string}}, 0)
+                    background-color: rgba(255,0,0, 0)
                 }
             }
         </style>
