--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 
         <div class="links-container bg-black">
             <a href="https://www.linkedin.com/in/arunvv" target="_blank" rel="noopener noreferrer"><img
-                    src="../static/images/linkedin.svg" class="icon" alt="Linkedin"></a>
+                    src="./images/linkedin.svg" class="icon" alt="Linkedin"></a>
             <a href="https://www.github.com/ArunVenkata" target="_blank" rel="noopener noreferrer"><img
-                    src="../static/images/github.svg" class="icon" alt="Github"></a>
+                    src="./images/github.svg" class="icon" alt="Github"></a>
             <a href="https://twitter.com/arun53999" target="_blank" rel="noopener noreferrer"><img
-                    src="../static/images/twitter.svg" class="icon" alt="Twitter"></a>
+                    src="./images/twitter.svg" class="icon" alt="Twitter"></a>
         </div>
         <h3 class="white-color bg-black">Want to chat?&nbsp;<a
                 href="mailto:vv.arun@ymail.com?subject=Message from vvarun.com">click here</a></h3>
